--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,9 @@
     width: min-content;
     margin: auto;
     padding: 1rem;    
-    margin-top: 15%;
+    margin-top: 5%;
+    margin-bottom: 2%;
+    border-radius: 2rem;
     background-color: #651e3e;
     height: 20rem;
     width: 50%;
